# libft

./: Makefile  README.md  cinvert_base.py  ft_ancient_text.py  ft_archive_creation.py  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_handle_format.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast  ft_lstmap.c  ft_lstnew.c  ft_lstsize  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_printf.h  ft_putchar.c  ft_putendl_fd  ft_puthex.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_unsigned.c  ft_putstr.c  ft_split.c  ft_strchr.c  ft_strdup.c  (+24 more)
CodeCultivation/ex0/: ft_garden_intro.py
CodeCultivation/ex1/: ft_garden_data.py
CodeCultivation/ex2/: ft_plant_growth.py
CodeCultivation/ex3/: ft_plant_factory.py
CodeCultivation/ex4/: ft_garden_security.py
CodeCultivation/ex5/: ft_plant_types.py
CodeCultivation/ex6/: ft_garden_analytics.py
Code_Nexus_test/ex0/: data_processor.py
Code_Nexus_test/ex1/: data_stream.py
Code_Nexus_test/ex2/: data_pipeline.py
Cosmic Data/ex0/: space_station.py
DataDeck/: battle.py  capacitor.py  tournament.py
DataDeck/ex0/: __init__.py  (+2 more)
The Codex/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
ex0/: construct.py
ex1/: loading.py  pyproject.toml  reqirements.txt  requirements.txt
ex2/: oracle.py
(+27 files in other folders)
